@@ -1,5 +1,9 @@
 Changes with Apache 1.3.23
 
+  *) Add checkgid app to do run-time validation of Group directive
+     values which might cause the server to fall over, but which
+     are syntactically correct.  [Ken Coar]
+
   *) NetWare: Added mod_unique_id to the project file.  
      [Brad Nicholes bnicholes@novell.com]
 
